# bmstu-refal-runtime

./: .gitignore
Project/: CMakeLists.txt  main.c
Project-build/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
Runtime/: CMakeLists.txt
Runtime/headers/: allocators.h  builtins.h  data_allocators.h  func_call.h  helpers.h  input.h  lterm.h  memory_manager.h  segment_tree.h  to_string.h  vmachine.h  vterm.h  vterm_allocators.h
Runtime/headers/allocators/: data_alloc.h  vterm_alloc.h
Runtime/headers/builtins/: builtins.h  case_map_table.h  unicode_io.h
Runtime/headers/gc/: gc.h
Runtime/sources/: ConvertUTF.c  allocators.c  arithmetic.c  arithmetics.c  builtins.c  data_allocators.c  data_gc.c  gc.c  helpers.c  input.c  lterm_allocators.c  memory_manager.c  segment_tree.c  to_string.c  vmachine.c  vterm_allocators.c  vterm_gc.c
Runtime/sources/allocators/: data_alloc.c  vterm_alloc.c
Runtime/sources/builtins/: arithmetics.c  builtins.c  case_map_table.c  io_builtins.c  slib.c  unicode_io.c
Runtime/sources/gc/: data_gc.c  gc.c  vterm_gc.c
Runtime/test/: main.c
Scripts/: run_all_tests.sh  test.sh  unidata_exporter.sh
Tests/: FunCallTest1.ref  FunCallTest2.ref  PatternTest1.ref  PatternTest2.ref  SimplePattern.ref  StringTest.ref
Tests/Arithmetic/: Add10.ref  Add14.out  Add15.ref  Add2.ref  Add3.ref  Add5.ref  Add7.ref  Add8.ref\  Div2.ref  Div4.ref  Div8.ref  Mod3.out  Mod4.ref  Mod5.ref  Mod6.out  Mul2.ref  Mul5.ref
Tests/AssemblyActions/: 001.ref  003.ref  003.ref.tmp
Tests/BadArithmOp/: 001.out  001.ref  002.out  002.ref  003.out  003.ref
Tests/Brackets/: 001.ref  005.ref
Tests/CallActions/: 001.ref  003.ref  005.ref  007.out  008.out  008.ref
Tests/DoubleArithmetic/: 001.out  002.out  002.ref  004.out  004.ref
Tests/FailSymbol/: 001.ref  002.ref  004.ref  005.ref  006.ref
Tests/Files/: 001.ref  002.ref  003.ref  004.out  004.ref  005.out  005.ref  Тестовое_Имя_Файля_для_UTF-8.write.tmp
Tests/FuncNames/: 001.ref  (+2 more)
libs/: gmp.h
project/: CMakeLists.txt  main.c
room_of_testing/: rmcc.ref  source.c  tmp.txt  work_source.c
runtime/: CMakeLists.txt
runtime/headers/: debug_print.h  func_call.h  func_result.h  helpers.h  lterm.h  memory_manager.h  to_string.h  vint.h  vmachine.h  vstring.h  vterm.h
runtime/headers/allocators/: data_alloc.h  vterm_alloc.h
runtime/headers/builtins/: builtins.h  case_mapping.h  char_vector.h  stack_builtins.h  unicode_io.h
runtime/headers/defines/: alloc_macros.h  checkers.h  data_struct_sizes.h  errors_str.h  gc_macros.h
runtime/headers/gc/: gc.h
runtime/sources/: debug_print.c  helpers.c  memory_manager.c  vmachine.c
runtime/sources/allocators/: data_alloc.c  vterm_alloc.c
runtime/sources/builtins/: arithmetics.c  case_mapping.c  char_vector.c  desysfun.c  implode_explode.c  io_builtins.c  open_file.c  slib.c  stack_builtins.c  sysfun.c  unicode_io.c  vterms_to_chars.c
runtime/sources/gc/: data_gc.c  gc.c  vterm_copy_gc.c  vterm_gc.c  vterm_mark_gc.c
runtime/test/: main.c
scripts/: compile.sh  run_all_tests.sh  test.sh
tests/: 001.ref  prelude.additional  qsimple.ref  standard_math.additional  standard_math.c
(+696 files in other folders)
